# PythonApi

./: README.md
PythonApi/: pyproject.toml  requirements.txt
PythonApi/api_tests/src/: consts.py
PythonApi/api_tests/src/clients/: api_client.py  db_client.py  requests_kwargs_func.py
PythonApi/api_tests/src/entity/categories/: categories_api_func.py  categories_paths.py
PythonApi/api_tests/src/entity/products/: products_api_func.py  products_paths.py
PythonApi/api_tests/src/entity/seller/: __init__.py  seller_api_func.py  seller_paths.py
PythonApi/api_tests/src/entity/suppliers/: suppliers_api_func.py  suppliers_paths.py
PythonApi/api_tests/tests/: conftest.py
PythonApi/api_tests/tests/Bugs/: Bugs.py
PythonApi/api_tests/tests/categories/: test_create_categories.py  test_delete_id_categories.py  test_get_categories.py  test_get_id_categories.py  test_put_id_categories.py
PythonApi/api_tests/tests/products/: test_create_products.py  test_delete_products.py  test_get_id_products.py  test_get_products.py  test_put_products.py
PythonApi/api_tests/tests/seller/: test_authorization.py  test_delete_is_seller.py  test_get_id_seller.py  test_get_seller.py  test_put_id_seller.py  test_registration.py
PythonApi/api_tests/tests/suppliers/: test_create_suppliers.py  test_delete_suppliers.py  test_get_id_suppliers.py  test_get_suppliers.py  test_put_id_suppliers.py
