[tool.poetry]
name = "api-tests"
version = "0.1.0"
description = "Автотесты для Swagger API"
authors = ["Ekaterina <vulpy.job@jmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pytest = "^8.3.4"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
